[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rashad Philizaire <rashadphilizaire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
requests = "^2.31.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
